--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -138,7 +138,7 @@
                 <li class="nav-item" role="none">
                     <a class="nav-link" asp-controller="UserManagement" asp-action="ManageAdmins" role="menuitem" data-tooltip="Manage Admins">
                         <i class="bi bi-shield-check"></i>
-                        <span class="nav-link-text">Manage Admins</span>
+                        <span class="nav-link-text">Global Admins</span>
                     </a>
                 </li>
             </ul>
